[tool.poetry]
name = "sproutauth"
version = "0.1.0"
description = ""
authors = ["Garik <khvatik.igor@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = {extras = ["email"], version = "^2.6.4"}
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
pydantic-settings = "^2.2.1"
bcrypt = "^4.1.2"
python-multipart = "^0.0.9"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
aiosqlite = "^0.20.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
